Fix no-gap pagination padding.

--- a/exopite-lightbox35/public/css/exopite-lightbox35-public.css
+++ b/exopite-lightbox35/public/css/exopite-lightbox35-public.css
@@ -208,3 +208,6 @@
 #lightbox35 .nav-right {
     right: 10px;
 }
+.exopite-multifilter-items.no-gap-container + .exopite-multifilter-paginations {
+    padding-top: 20px;
+}
